
2015-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l: Improved error detection of invalid floating-poit literals
	  and associated error messages. Also minor refactoring.

2015-06-12  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c: bug #78 - changed location of initialization of
	  local-storage items.
	* pplex.l: bug #102 - added check for contination line without literal
	  or word to continue.

2015-06-09  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: bug #83 - added check for relative LINE/COLUMN clauses in
	  screen section occurs items.

2015-05-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y: bug #136 added check for duplicate on/off clauses for switches
	* reserved.c, tree.h: fr #65 added more switches "SWITCH-16" to "SWITCH-36"
	* parser.y, reserved.c, scanner.l: fr #65 better support for ACUCOBOL
	  extension "SWITCH 1" to "SWITCH 26", added alias SWITCH [A-Z],
	  allow this extension only with -fsyntax-extension

2015-05-07  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y, typeck.c, cobc.h: bug #135 - give correct error position
	  (cb_source_file + new cb_exp_line) for expression errors

2015-04-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (cb_emit_initialize): bug #84 check target for INITIALIZE,
	  almost fixed as suggested by Edward Hard

2015-04-02  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: set FORMATTED-CURRENT-DATE, INTEGER-OF-FORMATTED-DATE, and
	  TEST-FORMATTED-DATETIME and INTEGER-OF-FORMATTED-DATE to implemented

2015-04-02  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c : replaced "MSC_VER >= 1400" with COB_USE_VC2005_OR_GREATER

2015-03-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c : added more checks of overlapping MOVE,
	  generate MOVEs as overlapping if it's not sure it isn't

2015-03-05  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
